[project]
name = "a-share-code-converter"
version = "0.2.1"
description = "A lightweight Python utility to convert A-share stock codes to various formats"
readme = "README.md"
authors = [{ name = "xTbwOw", email = "tomtang0619@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.20",
  "pandas>=1.3",
  "polars>=0.18",
]
