[metadata]
name = a-share-code-converter
version = 0.1.0
description = A lightweight Python utility to convert A-share stock codes to various formats
long_description = file: README.md
long_description_content_type = text/markdown
author = xTbwOw
author_email = tomtang0619@gmail.com
license = MIT
url = https://github.com/xTbwOw/a_share_code_converter

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.20
    pandas>=1.3
    polars>=0.18

[options.packages.find]
exclude =
    tests
    examples

[build-system]
requires = ["setuptools", "wheel"]
build-backend = setuptools.build_meta
